# py-bcast

./: .gitattributes  .gitignore  LICENSE  README.md  broadcast.py  main.py  pyproject.toml  test_broadcast_client.py
.github/workflows/: ci.yml  publish.yml
docs/: api.md  architecture.md  compatibility.md  instruments.md  limitations.md  services.xml  services_parsed.json
docs/legacy/: api.md  endpoints.md  fields.md  instruments.md  internals.md  limitations.md  roadmap.md
docs/plus/: api.md  endpoints.md  internals.md  limitations.md  roadmap.md
research/: analyze_aetp.py  contentproxy_client.py  dde_advise_test.py  dde_all_topics.py  dde_explore_topics.py  dde_tickers.py  generate_fields_doc.py  parse_services_xml.py  probe_aetp_tcp.py  test_bdh.py
scripts/: contentproxy_client.py  find_session_token.py  gen_sync.py  generate_fields_doc.py  parse_aetp17.py  parse_camposbc.py  probe_aetp_output.py  probe_all_endpoints.py  protocol_notes.md
src/py_bcast/: __init__.py  _dde.py  _http.py  _session.py  accessor.py  client.py  events.py  fixedincome.py  fundamental.py  funds.py  historical.py  instruments.py  macro.py  news.py  reference.py  ticker.py
src/py_bcast/_async/: __init__.py  _helpers.py  credit.py  events.py  executor.py  fixedincome.py  fundamental.py  funds.py  historical.py  macro.py  news.py  plus.py
src/py_bcast/_core/: __init__.py  aetp.py  binary.py  cache.py  columns.py  config.py  constants.py  dates.py  exceptions.py  http.py  logging.py  memory.py  multi.py  normalize.py  output.py  ratelimit.py  resolve.py  retry.py  routing.py  session.py  validation.py  xml_helpers.py
src/py_bcast/_legacy/: __init__.py  aetp.py  binary.py  columns.py  dde.py  endpoints.py  executor.py  http.py  markit.py  multi.py  output.py  resolve.py  resolve_state.py  session.py  spec.py  xml_helpers.py
src/py_bcast/_legacy/_async/: __init__.py  bdh.py  executor.py  markit.py  ohlcv.py  quote.py  resolve.py  ticks.py  transport.py
src/py_bcast/_legacy/_sync/: __init__.py  bdh.py  executor.py  markit.py  ohlcv.py  quote.py  resolve.py  ticks.py  transport.py
src/py_bcast/_plus/: __init__.py  corporate.py  crypto.py  funds.py  http.py  intraday.py  news.py  realtime.py  realtime_async.py  reference.py  session.py
src/py_bcast/_plus/_async/: __init__.py  corporate.py  funds.py  news.py  reference.py  trades.py  transport.py
src/py_bcast/_plus/_sync/: __init__.py  corporate.py  funds.py  news.py  reference.py  trades.py  transport.py
src/py_bcast/credit/: __init__.py  cds.py
src/py_bcast/fundamental/: __init__.py  consensus.py  events.py  reference.py
src/py_bcast/historical/: __init__.py  intraday.py  prices.py
src/py_bcast/instruments/: __init__.py  db.py
src/py_bcast/macro/: __init__.py  indicators.py
src/py_bcast/news/: __init__.py  api.py
src/py_bcast/realtime/: __init__.py  client.py
tests/: conftest.py  test_async_parity.py  test_async_vectorize.py  test_ergonomics.py  test_events.py  test_fundamental.py  test_historical.py  test_instruments.py  test_intraday.py  test_macro.py  test_normalize.py  test_output.py  test_plus_realtime.py  test_reference.py  test_session.py  test_unasync.py
