[project]
name = "py-bcast"
version = "0.5.0"
description = "Python client for AE Broadcast market data terminal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dde = ["pywin32>=306"]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_bcast"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
