[project]
name = "py-bcast"
version = "0.6.0"
description = "Python client for AE Broadcast market data terminal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=41.0.0",
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pywin32>=306",
    "tenacity>=9.1.4",
    "websocket-client>=1.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_bcast"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "legacy_session: needs BROADCAST_SESSION (env var or running bcsys32.exe)",
    "legacy_db: needs aetp_17.dat on disk (bcsys32.exe must have run here)",
    "plus: needs Broadcast+ access (BROADCAST_PLUS_TOKEN or running Broadcast+.exe)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
