[project]
name = "py-bcast"
version = "0.8.1"
description = "Python client for AE Broadcast market data terminal"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "py-bcast contributors" }]
requires-python = ">=3.12"
keywords = [
    "market-data",
    "finance",
    "b3",
    "bovespa",
    "stocks",
    "trading",
    "dde",
    "websocket",
    "blpapi",
    "xbbg",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=41.0.0",
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pywin32>=306",
    "tenacity>=9.1.4",
    "websocket-client>=1.8.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/enzoomoreira/py-bcast"
Repository = "https://github.com/enzoomoreira/py-bcast"
Issues = "https://github.com/enzoomoreira/py-bcast/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_bcast"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "legacy_session: needs BROADCAST_SESSION (env var or running bcsys32.exe)",
    "legacy_db: needs aetp_17.dat on disk (bcsys32.exe must have run here)",
    "plus: needs Broadcast+ access (BROADCAST_PLUS_TOKEN or running Broadcast+.exe)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "unasync>=0.6.0",
]
